tests/rpm-pkgs/sscg-3.0.0-1.fc35/output-exp@valgrind/scan-results.err
Error: VALGRIND_WARNING:
sscg-3.0.0/redhat-linux-build/dhparams_test: note: while executing process 401 with arguments: 512 5
sscg-3.0.0/redhat-linux-build/../test/dhparams_test.c:72: warning[Leak_DefinitelyLost]: 640 (80 direct, 560 indirect) bytes in 1 blocks are definitely lost in loss record 10 of 10
/usr/lib64/libcrypto.so.1.1.1q: note: called from CRYPTO_zalloc()
/usr/lib64/libcrypto.so.1.1.1q: note: called from here
sscg-3.0.0/redhat-linux-build/../test/dhparams_test.c:72: note: called from main()
#   70|       }
#   71|   
#   72|->   pctx = EVP_PKEY_CTX_new (params, NULL);
#   73|     if (!EVP_PKEY_param_check(pctx))
#   74|       {
